[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qer"
version = "0.1.0"
description = "GreyNOC Quantum Exposure Radar — defensive cryptographic bill-of-materials scanner and PQC readiness monitor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GreyNOC" }]
keywords = ["post-quantum", "pqc", "tls", "cbom", "hndl", "security", "siem"]
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
qer = "qer.cli:main"

[project.urls]
Homepage = "https://github.com/GreyNOC/QER"

[tool.setuptools]
packages = ["qer", "qer.siem"]
