[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qer"
version = "0.1.3"
description = "GreyNOC Quantum Exposure Radar — defensive cryptographic bill-of-materials scanner and PQC readiness monitor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GreyNOC" }]
keywords = ["post-quantum", "pqc", "tls", "cbom", "hndl", "security", "siem", "cyclonedx", "stix"]
dependencies = ["cryptography>=42.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking :: Monitoring",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
qer = "qer.cli:main"

[project.urls]
Homepage = "https://github.com/GreyNOC/QER"
Repository = "https://github.com/GreyNOC/QER"
Issues = "https://github.com/GreyNOC/QER/issues"

[tool.setuptools]
packages = ["qer", "qer.siem"]
